Add color capability to svg
